# agentic-sdlc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  requirements.txt
adapters/: __init__.py  deploy.py  repo_host.py  store_client.py
adapters/adk/: __init__.py  invoker.py  (+1 more)
agents/: specs.py
docs/: architecture.md  design-invariants.md  setup-runbook.md
engine/: config.py  diff_analysis.py  fs_tools.py  gate.py  rejection.py  repo_host.py  workspace.py
evals/: README.md
evals/agents-cli/: .gitignore  README.md  agents-cli-manifest.yaml  pyproject.toml  run_eval.sh
evals/agents-cli/risk_assessor_agent/: __init__.py  agent.py
evals/agents-cli/tests/eval/: eval_config.yaml
evals/agents-cli/tests/eval/datasets/: risk_assessor_dataset.json
mcp_server/: db.py  server.py
monitor/: synthetic_monitor.py
orchestrator/: __main__.py  activity.py  agent_support.py  config.py  definition.py  dependency_graph.py  driver.py  errors.py  gate.py  invoker.py  json_util.py  provisioning.py  rejection.py  schemas.py  workspace.py
scripts/: cleanup_cloud_service.sh  demo.sh  reset_demo.sh  reset_item.py  seed.py  setup.py  store_status.py  verify_demo.py  watch.py
sdlc-steps/: policy.yaml
sdlc_steps/: policy.yaml
tests/: test_agent_layer.py  test_definition.py  test_delivery_store.py  test_framework_boundary.py  test_gate.py  test_governance_tail.py  test_substrate.py  test_workspace.py
tools/: __init__.py  dependency_graph.py  diff_analysis.py  fs_tools.py  incident_resolver.py  preprod_ci.py  sprint_packer.py  verify_label.py
(+65 files in other folders)
